--- a/Response_to_Reviewers.tex
+++ b/Response_to_Reviewers.tex
@@ -79,18 +79,18 @@ Thank you for the feedback on the draft paper ``Space Matters: extending sensiti
 
 
 
-First, the following general changes were done:
+As a response to several reviewers, we made the following general changes:
 
 \begin{itemize}
-	\item Several comments, including the ones of the first and third referee, were linked to clarity and explicit description of models: we clarified the descriptions and better justified our choices, and also provided pseudo-codes in Appendix and made clearer that source code are openly available.
-    \item The feedback on the third referee that the most interesting was the phase diagram comparison was not directly compatible with other referees comments; we however added some developments and comments on this point to conciliate as most as possible these different comments.
-\end{itemize}
+	\item Several comments, from the first and third referees especially, suggested that we clarity and explicit the description of our two models: we clarified the descriptions and justified our choices more thoroughly, and also provided pseudo-codes for each model in the Appendix so as to help the reader navigate the implementation chosen compared to other articles. Finally, we mentioned more clearly in the text the fact that source codes are openly available in a github repository.
+    \item There was a conflict between the comments of the third referee and the other referees about the comparison of phase diagram. In order to conciliate as much as possible the different parties, we added some developments and comments about how we defined, built, justified and compared phase diagrams in the paper.
+    \end{itemize}
 
 \medskip
 
 
 
-We provide now you point-by-point responses to referees comments.
+We now turn to point-by-point responses to referees comments.
 
 
 \medskip
@@ -100,14 +100,17 @@ Concerning specifically the comments made by the first referee:
 
 \begin{itemize}
 	% 1. I think it would be better if the author would focus on a single model. This way they could describe the model and the analyses in more detail. As it stands, the models are treated as black boxes. 
-	\item The suggestion to focus on a single model is indeed a qualified comment. However, after presenting our research to several audiences, we came to the conclusion that the genericity of our approach would be better served by two case studies than with a single model. In that perspective, the ``black-box'' is seen as an advantage as it suggests this genericity. We acknowledge the fact that this choice led us to shorten their presentations. Nevertheless, we have been taking heed to your remark to improve the description of the models by adding pseudo-codes in Appendix and recalling more clearly the link to model source we used.
+	\item The suggestion to focus on a single model is a qualified comment. However, after presenting our research to several audiences, we came to the conclusion that the genericity of our approach would be better served by two case studies rather than with a single model. In that perspective, the ``black-box'' is seen as an advantage as it reinforces genericity. We acknowledge the fact that this choice led us to shorten the model presentations. Nevertheless, we have taken notice of your remark by improving the description of the models and their results through the addition of pseudo-codes in Appendix, result descriptions in the text and by recalling more clearly the link to the model source we used. Furthermore, we have focused on some of the most classical models of the ABM literature so as to lower the reader's cost of entry into the methodology.
     %We believe this is sufficient as the models have not been adjusted from these textbook cases implementations.
    
    % I believe it would be better to begin with an illustrative example on how two or three initial patterns influence the model results and then use the suggested method for a more extensive analysis
-   \item \comment[JR]{Possibility to find configuration with an ``eyeball'' difference ? i'm not sure of that..}
+   \item \comment[JR]{Possibility to find configuration with an ``eyeball'' difference ? i'm not sure of that..} \comment[CC]{peut-être en prenant des cas extrêmes sur Sugarscape?}
 	
 	% 2. It is very important to describe the models. This is especially relevant for the Schelling model, which has many variants; each has different dependencies on the initial pattern. In my opinion, the NetLogo implementation is not the best choice because the model does not reach a state of segregation when agents are highly intolerant.
-	\item There was a misunderstanding for the Schelling implementation actually used, as we used our own implementation which pseudo-code has been added in Appendix of the paper and source code is openly available on the git repository of the project. This version implements the one used by (Gauvin et al., 2009), which also influenced us for the use of the term ``phase diagram''. It does not either reach a segregated state for high values of intolerance, but it does not cause a problem in our case as indicators can be computed on any model state (and actually reflect the fact that it is not segregated).
+	\item There was a misunderstanding for the Schelling implementation actually used, as we used our own implementation which pseudo-code has been added in Appendix of the paper and source code is openly available on the git repository of the project. This version implements the one used by (Gauvin et al., 2009), which also influenced us for the use of the term ``phase diagram''.% It does not reach a segregated state for high values of intolerance, but it does not cause a problem in our case as indicators can be computed on any model state (and actually reflect the fact that it is not segregated).
+	 \comment[CC]{le modèle ne produit pas de ségrégation quand les individus sont très intolérants? Comment ça? Bien sûr qu'il le fait (sous contrainte du taux de vacance).
+	  Cela dit y'a bien un point sur lequel l'implem Netlogo n'est pas bonne: c'est que la relocalisation des mécontents est random alors que dans le bouquin de Schelling, apparemment, c'était dans un voisinage proche.}
+
     \item More generally concerning the choice of these two models, we aim at helping the readers to distance themselves from the case studies and focus on the genericity of the approach. This also explains why we have chosen Sugarscape as a second example: these two models are often used as toy models due to the simplicity of their mechanisms and therefore do not require a high level of expertise nor technicality to apprehend the impacts of the initial spatial conditions on the model outputs. This is again an argument in favour of our choice: space-dependent variations are to be expected even with the most simple sociospatial models.
 	
 	% 3. I am not sure why the Sugarscape model has been chosen given that the paper seems to be focused on cities.
@@ -117,9 +120,13 @@ Concerning specifically the comments made by the first referee:
 	% 4. Consider replacing “meta parameters” with something like “generator parameters” or “initial pattern parameters.”
 	%In order to clarify the concept of ``meta-parameter'' that we prefer to keep, we now propose a short definition after the first use of the term (section Methods): "In addition to the usual protocol (upper branch of the figure), which consists of running a model $\mu$ with different values of its parameters, we introduce a spatial generator which depends on its very own set of parameters and feeds the model $\mu$ at initialisation (lower branch). We call these parameters meta-parameters to distinguish from the standard parameters of the models and highlight their higher position in the simulation process".
     \item \comment[JR]{TB la def Marion ; là on peut choisir de virer en effet le terme, ou dire que les 3 sont interchangeable mais que "meta-" est plus pratique, qu'en pensez vous ?}
+    \comment[CC]{d'acc.}
+	
 	
 	% 5. Line 228: Please explain why the median was chosen. Especially given that you use an L2 norm and variances in the index
 	\item \comment[JR]{je pensais qu'on prenait la moyenne ? je verifie... ligne 175 on écrit la médiane en effet}
+	\comment[CC]{ça doit être moi parce que je pensais qu'on prenait effectivement la médiane, qui est plus robuste aux extrêmes, mais si c'est la moyenne et que ça reste proche entre différentes réplications why not.}
+	
 	
 	% 6. Line 232: comparing phase diagrams is related to the topic of comparing patterns. It would make sense to mention the methods that are usually used to compare patterns
 	\item \comment[JR]{biblio a rajouter}
@@ -128,21 +135,32 @@ Concerning specifically the comments made by the first referee:
 	\item \comment[JR]{on avait teste avec le Monge ca donnait a peut pres pareil ; donc les normes alpha surement encore plus. je regarde.}
 	
 	% 8. Regarding the spatial generator: the authors should explain why this generator is relevant to these two models? 
-	\item This spatial generator is relevant to both model as it produces density grids at a ``metropolitan scale'' (see detailed discussion added in Appendix and the original paper from which we used the generator), which is the scale at which both model were initially intended to be. We made this aspect more explicit.
+	\item This spatial generator is relevant to both model as it produces density grids at a ``metropolitan scale'' (see detailed discussion added in Appendix and the original paper from which we used the generator), which is the scale at which both model were initially intended to be. We made this aspect more explicit. 
+	
+	In the case of Schelling, this is the scale at which most empirical segregation indices are computed. In the case of Sugarscape, it corresponds to the whole city if the model is a metaphor for city resources (Batty....), or to a generic landscape where a resource is grown otherwise. In both cases, our point is that there exist many different patterns of density distribution in resource location and urban density, and that not acknowledging this diversity leads to potentially false results. Furthermore, in urban models, we argue that the hypothesis of isotropic density is potentially the most harmful one (e.g. the least realistic, although this is the case of most Schelling models).
+	\comment[CC]{argumentaire à ajouter dans le papier}
+	
 	
 	% 9. The authors should illustrate the contribution of each parameter of the generator to the generated initial pattern using a figure. Details of the generators should be included in an appendix
 	\item The behavior of the spatial generator was described with more details in Appendix.
 	
 	% 10. Explain how the density grids are used in the Schelling model, do you allow more than one agent to be in the same cell? 
-	\item \comment[JR]{il a mal lu ou on est pas assez explicites, a detailler}
+	\item Yes, we allow more agents to be in the same cell. The potential density is defined by the density grid generated, and is population with the same number of agents in all grids. This distribution is the one at initialisation. If the potential density is not reached, more agents can move in the cell, otherwise it is deemed full and unavailable for further moves. The satisfaction and segregation indices are computed with regard to the people in the cell and the people present in neighbouring cells.
+	\comment[JR]{il a mal lu ou on est pas assez explicites, a detailler}
+	\comment[CC]{ça va comme réponse? }
+	\comment[CC]{argumentaire à ajouter dans le papier}
 	
 	% 11. Line 297: I am not sure why empirical density destitutions of cities are important in the context of this study. 
-	\item 
+	\item cf infra. 
+	\item density distributions of empirical cities are important because we want to test models with realistic ranges of initial patterns of density distribution. Therefore we cannot limit ourselves to a single 2-peak mountain in the classical Sugarscape model and an isotropic square city in Schelling. We chose to use actual distribution of European cities to constraint our density generation.
+\comment[CC]{argumentaire à ajouter dans le papier}
+	
+	
 	
 	% 12. Line 641: NetLogo supports grids, continuous space, and GIS elements. It does not restrict the user in any way.
     % \comment[JR]{plutot d'accord avec lui mais parce que proficient en NetLogo, peut etre que des debutants sont plus contraints ? quelquun aurait une ref là dessus ?}
     %\comment[MLT]{En fait, c'est surtout le cas des pre-built simulations proposées dans la librairie de NetLogo. J'ai un peu cherché, je trouve pas de références qui montrent explicitement la surabondance des grilles dans les modèles hors librairie...}[(JR) ok yes en effet ! cela devrait suffire comme argument ?]
-	\item We agree that NetLogo does not restrict the use on what implementation to use. However, some features are much more easier as raster or the contrary, what could influence the choice of beginners. Furthermore, models in the built-in NetLogo model library mostly rely on rasters. We clarified that statement in the paper.
+	\item We agree that NetLogo does not restrict the use on what implementation to use. However, some features are much more easier as raster or the contrary, which could influence the choice of beginners. Furthermore, models in the built-in NetLogo model library mostly rely on rasters. We clarified that statement in the paper.
 	
 	% 13. Line 301: I am not sure what the authors mean by “interesting grids”
 	\item The term ``interesting grids'' was a typo and corrected, ``grids'' only was meant.
@@ -163,8 +181,10 @@ Concerning the comments made by the second referee:
 
 \begin{itemize}
 	% In the abstract the authors claim that initial spatial conditions are often taken for granted. I do not agree to this statement. Initial spatial condition can have a large impact on the results of a model, however I do not think that the initial spatial conditions are often taken for granted.
-	\item \comment[JR]{il s'agirait de nuancer ici}
-	
+	\item We forcefully agree with the referee in that initial spatial conditions can have a large impact on the results of the model. Maybe not all papers take them for granted, but what we meant is that compared to other parameters, initial spatial conditions are much less often explored using sensitivity analysis. Actually, we know only a few papers which have explored the impact of initial spatial conditions as a systematic criterion in a sensitivity analysis of model results. We clarified this point in the introduction.
+    \comment[JR]{il s'agirait de nuancer ici}
+\comment[CC]{argumentaire à ajouter dans le papier}
+
 	% Page 2 line 88: the authors state that “Even in applied cases when GIS geometries of a particular city are used, the spatial distribution of agents is still approximated by a constant density”, I do not think this is true. Many models generate a heterogeneous synthetic population that is based on local data (replicating the actual population as closely as possible) and in far more detail then what is done in this paper. I am thinking of work in the line of disease diffusion, crime etc.
 	\item \comment[JR]{il a un point car ce sont des classes de modeles qu'on a pas trop cité ? par contre la sensibilite a ces distribs precises n'est pas testée, ou pas systeématiquement : il faut qu'on clarifie ou reformule}
 	
@@ -175,7 +195,8 @@ Concerning the comments made by the second referee:
 	\item \comment[JR]{oui du coup en disant ça ça repond à ses deux points précédents}
 	
 	% In section 1.3 (Previous considerations on the effects of the spatial configuration in simulation models) authors provide a lot of evidence on previous work on the impact of initial spatial conditions on the output of models. This is contrary to the statement in the abstract that initial conditions are often taken for granted.
-	\item 
+	\item Indeed, we have tried to review articles where some kind of sensitivity to initial spatial conditions are tackled. But first, the references cited in this section are few compared to the mass of geosimulation articles published without any mention of dependence of output on initial spatial condition. Second, the references cited mostly provide some hints of impact of initial spatial conditions on the output of models (due to the accuracy of data, shape of boundaries and spatial heterogeneity) but none provide a systematic inquiry into the impact of systematically defined spatial input on the model output in the way we try to provide later on in the paper. We have tried to argue this point at the end of the section.
+    \comment[CC]{argumentaire à ajouter dans le papier}
 	
 	% The most interesting part of the research to me, is not the way the density layers are generated but the use of the phase diagrams, defined as a vector of final aggregated model outputs. As these are vectors, they are not so different from time series and many techniques exist to compare vectors in this domain. I wonder if the Euclidean distance is the best measure to determine the difference between the phase vectors of different spatial inputs.
 	% -> 
